--- a/iTunesSearchApi/backend/package.json
+++ b/iTunesSearchApi/backend/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha",
-    "start": "node server.js"
+    "start": "node server.js",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
   },
   "author": "Joshua Karp",
   "license": "ISC",
@@ -23,6 +24,5 @@
   "engines": {
     "node": "12.16.0",
     "npm": "6.13.4"
-  },
-  "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
+  }
 }
